# alamo_schedule

./: .gitignore  Cargo.toml  README.md  current_schedule.json  index.html  market_schedule.txt  run_regal_json.sh  schedule.js  serve.sh  test_amc_data_summary.py
.github/workflows/: generate-schedule.yml
json_summarize/: Cargo.toml
json_summarize/src/: main.rs
src/: data.rs  explore.sh  main.rs
